Search input font size needs to 16px to avoid zoom on iOS

--- a/src/components/global/search/search.css
+++ b/src/components/global/search/search.css
@@ -1,7 +1,5 @@
 .c-search {
   .c-field__input {
-    @apply --typeset-label;
-
     width: 100%;
     background-color: $navigation-color--offset;
     padding-left: map(spaces, xlarge);
